<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context=".Activities.Weather">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="@color/colorWhite">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/id_btn_daily_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_report"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:padding="15dp"
                    android:text="@string/btn_special_daily_report"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/shapebutton"/>

                <Button
                    android:id="@+id/id_btn_flood_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_report"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:padding="15dp"
                    android:text="@string/btn_special_daily_flood"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/shapebutton" />

                <Button
                    android:id="@+id/id_btn_river_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_report"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:padding="15dp"
                    android:text="@string/btn_special_river_report"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/shapebutton" />

                <Button
                    android:id="@+id/id_btn_pmd_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_pdma_alert"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:padding="15dp"
                    android:text="@string/btn_special_pmd_alert"
                    android:textAllCaps="false"
                    android:background="@drawable/shapebutton"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="20dp" />

                <Button
                    android:id="@+id/id_btn_rain_fall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_rainfall"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:padding="15dp"
                    android:text="@string/btn_special_rainfall"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/shapebutton"
                    android:layout_marginBottom="20dp" />

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>